@@ -59,6 +59,8 @@ BioC data packages
 
 * fixed documentation to acommodate this change
 
-2009-03-28 B Carvalho - committed version 1.0.63
+2009-03-28 B Carvalho - committed version 1.0.64
 
 * modified warning message
+
+* modified crlmm and cnrma to look for data at extdata/
